Streamline ESAllocationTestCase#applyStartedShardsUntilNoChange
The `logger.debug` line here would compute the state's immutable routing
nodes on each iteration. There's no need to do this at less verbose log
levels, and it can be somewhat inefficient, so with this commit we skip
the computation unless it's needed.